[gd_scene load_steps=4 format=3 uid="uid://bb100fursvr26"]

[ext_resource type="Script" uid="uid://dfradrw0vii5t" path="res://scenes/ui/run_summary_screen.gd" id="1_chnnw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 64
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="RunSummaryScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chnnw")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RUN COMPLETE!"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Run Statistics"
horizontal_alignment = 1

[node name="StatsScrollContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="StatsContainer" type="VBoxContainer" parent="MainContainer/StatsScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="KPEarnedLabel" type="Label" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Knowledge Points Earned: 0 KP"
horizontal_alignment = 1

[node name="RankContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="RankLabel" type="Label" parent="MainContainer/RankContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Bronze"
horizontal_alignment = 1

[node name="RankTitleLabel" type="Label" parent="MainContainer/RankContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Script Kiddie"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Return to Menu"
